Portafolio primera parte

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import '../styles/global.css';
+import NavBar from '../components/NavBar.astro';
+import Sidebar from '../components/Sidebar.astro';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -7,8 +13,18 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
-		<slot />
+	<body class="dark:bg-gray-900 text-white">
+		<div >
+			<NavBar />
+			<div class="flex gap-x-6">
+				<Sidebar/>
+				<div class=" ml-20">
+					<slot />
+				</div>	
+			</div>
+			
+			
+		</div>
 	</body>
 </html>
 
