--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,33 +8,19 @@ import { Image } from "astro:assets";
 
 <Layout>
   <div class="text-center flex justify-center items-center gap-40 my-10 p-8">
-    <div class="w-200 rounded-lg text-left text-2xl">
-      <p class="text-gray-400 mb-4">
+    <div class="w-200 rounded-3xl text-left text-3xl bg-zinc-900 p-5">
+      <p class="text-white mb-4">
         Como estudiante de Ingeniería en Sistemas, soy un entusiasta del
         desarrollo e implementación de soluciones tecnológicas que permiten a
         los negocios alcanzar el impacto que buscan.
       </p>
-      <p class="text-gray-400 mb-4">
+      <p class="text-gray-400 mb-4 ">
         Me especializo en el desarrollo web full stack, trabajando con
         tecnologías de vanguardia con facilidad de aprendizaje para adaptarme a
         nuevas tecnologías.
       </p>
-      <p class="text-gray-400 mb-4">
-        A lo largo de mi formación académica, he participado en proyectos que
-        abarcan todas las etapas del ciclo de vida del desarrollo de software.
-        Desde el análisis y levantamiento de requerimientos, hasta el diseño,
-        desarrollo, pruebas, implementación y mantenimiento.
-      </p>
-      <p class="text-gray-400">
-        Cada proyecto que implemento representa una oportunidad de aprendizaje
-        que me motiva a profundizar en los objetivos del negocio y a comprender
-        mejor el pensamiento crítico de los colaboradores en las distintas
-        unidades.
-      </p>
+      
     </div>
     <Image src="/assets/elmer.jpg" alt="Elmer" width={400} height={400} />
   </div>
-
-  
-  
 </Layout>
