--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,14 +11,14 @@ import Sidebar from '../components/Sidebar.astro';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Elmer Sosa</title>
 	</head>
 	<body class="dark:bg-gray-900 text-white">
 		<div >
 			<NavBar />
-			<div class="flex gap-x-6">
+			<div class="flex gap-x-6 h-screen">
 				<Sidebar/>
-				<div class=" ml-20">
+				<div class="ml-20 flex-grow">
 					<slot />
 				</div>	
 			</div>
