--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,32 +1,37 @@
-<ul class="mt-16 space-y-4 w-90 flex flex-col items-start pl-10 pt-30 bg-amber-400">
+<ul class="mt-16 w-sm ml-10 flex flex-col items-start py-6 rounded-3xl border-l border-r border-t  border-gray-700">
   <li>
-    <a class="group flex items-center gap-4 py-2 px-3 rounded-lg transition-all hover:bg-slate-800 focus-visible:bg-slate-800" href="#about">
-     <span class="animate-bounce">
-      🔽
-     </span>
-     <span class="text-2xl font-semibold uppercase tracking-wide text-white group-hover:text-blue-400">
-      Sobre Mi
-     </span>
+    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="#about">
+      <span class="text-xl animate-pulse">💡</span>
+      <span class="text-xl font-bold uppercase tracking-wide text-white group-hover:text-yellow-400">
+        Sobre Mí
+      </span>
     </a>
   </li>
+
   <li>
-    <a class="group flex items-center gap-4 py-2 px-3 rounded-lg transition-all hover:bg-slate-800 focus-visible:bg-slate-800" href="#experience">
-     <span class="animate-bounce">
-      🔽
-     </span>
-     <span class="text-2xl font-semibold uppercase tracking-wide text-white group-hover:text-blue-400">
-      Experience
-     </span>
+    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="#experience">
+      <span class="text-xl animate-pulse">🚀</span>
+      <span class="text-xl font-bold uppercase tracking-wide text-white group-hover:text-yellow-400">
+        Experiencia
+      </span>
     </a>
   </li>
+
   <li>
-    <a class="group flex items-center gap-4 py-2 px-3 rounded-lg transition-all hover:bg-slate-800 focus-visible:bg-slate-800" href="#projects">
-     <span class="animate-bounce">
-      🔽
-     </span>
-     <span class="text-2xl font-semibold uppercase tracking-wide text-white group-hover:text-blue-400">
-      Projects
-     </span>
+    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="#projects">
+      <span class="text-xl animate-pulse">📁</span>
+      <span class="text-xl font-bold uppercase tracking-wide text-white group-hover:text-yellow-400">
+        Proyectos
+      </span>
     </a>
   </li>
- </ul>
+
+  <li>
+    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="#contact">
+      <span class="text-xl animate-pulse">📬</span>
+      <span class="text-xl font-bold uppercase tracking-wide text-white group-hover:text-yellow-400">
+        Contacto
+      </span>
+    </a>
+  </li>
+</ul>
