--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import { Image } from "astro:assets";
     </div>
     
     <section class="p-10 ">
-      <h2 class="text-3xl font-bold text-white mb-6 text-left ml-2">Del Aprendizaje a la Implementación</h2>
+      <h2 class="text-xl font-bold text-white mb-6 text-left ml-2">Del Aprendizaje a la Implementación</h2>
       
       <div class="grid md:grid-cols-2 gap-6">
         <!-- Tarjeta 1 -->
@@ -68,6 +68,118 @@ import { Image } from "astro:assets";
             <span class="text-red-400 font-semibold">objetivos del negocio</span> y a comprender mejor el 
             <span class="text-yellow-300 font-semibold">pensamiento crítico</span> de los colaboradores en las distintas unidades.
           </p>
+        </div>
+      </div>
+    </section>
+    
+    <section class="p-14">
+      <h2 class="text-4xl font-bold text-white text-center ml-2 mb-8">Hábilidades </h2>
+      <h2 class="text-xl font-bold text-white text-left ml-2 mb-8">Gestión de equipos y </h2>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-zinc-900 p-6 rounded-xl shadow-lg border border-gray-700 text-center">
+          <h3 class="text-lg font-bold text-blue-400">🎤 Oratoria</h3>
+          <p class="text-gray-300 mt-2">Experiencia en moderación de eventos tecnológicos.</p>
+        </div>
+        <div class="bg-zinc-900 p-6 rounded-xl shadow-lg border border-gray-700 text-center">
+          <h3 class="text-lg font-bold text-green-400">⚡ Scrum</h3>
+          <p class="text-gray-300 mt-2">Aplicación de metodologías ágiles en desarrollo.</p>
+        </div>
+        <div class="bg-zinc-900 p-6 rounded-xl shadow-lg border border-gray-700 text-center">
+          <h3 class="text-lg font-bold text-yellow-400">🚀 Liderazgo</h3>
+          <p class="text-gray-300 mt-2">Coordinación de equipos en proyectos de software.</p>
+        </div>
+      </div>
+    </section>
+    
+    <section class="p-14">
+      <h2 class="text-xl font-bold text-white text-left mb-8">Frontend</h2>
+    
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+        <!-- Tarjeta Vue.js -->
+        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vuejs/vuejs-original.svg" alt="Vue.js" class="w-12 mx-auto">
+          <h3 class="text-lg font-bold text-green-400 mt-2">Vue.js</h3>
+          <div class="relative pt-1">
+            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
+              <div style="width:40%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-500"></div>
+            </div>
+            <span class="text-sm text-gray-300">40%</span>
+          </div>
+        </div>
+    
+        <!-- Tarjeta JavaScript -->
+        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="w-12 mx-auto">
+          <h3 class="text-lg font-bold text-yellow-400 mt-2">JavaScript</h3>
+          <div class="relative pt-1">
+            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
+              <div style="width:50%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-yellow-500"></div>
+            </div>
+            <span class="text-sm text-gray-300">50%</span>
+          </div>
+        </div>
+    
+        <!-- Tarjeta CSS -->
+        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" class="w-12 mx-auto">
+          <h3 class="text-lg font-bold text-blue-400 mt-2">CSS</h3>
+          <div class="relative pt-1">
+            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
+              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-blue-500"></div>
+            </div>
+            <span class="text-sm text-gray-300">45%</span>
+          </div>
+        </div>
+    
+        <!-- Tarjeta Bootstrap -->
+        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap" class="w-12 mx-auto">
+          <h3 class="text-lg font-bold text-purple-400 mt-2">Bootstrap</h3>
+          <div class="relative pt-1">
+            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
+              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-purple-500"></div>
+            </div>
+            <span class="text-sm text-gray-300">45%</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="">
+      <h2 class="text-xl text-left font-bold">Backend y Base de datos</h2>
+
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Bootstrap" class="w-12 mx-auto">
+          <h3 class="text-lg font-bold text-green-600 mt-2">Nodejs y Express</h3>
+          <div class="relative pt-1">
+            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
+              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-700"></div>
+            </div>
+            <span class="text-sm text-gray-300">70%</span>
+          </div>
+        </div>
+  
+        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="Bootstrap" class="w-12 mx-auto">
+          <h3 class="text-lg font-bold text-blue-400 mt-2">Typescript</h3>
+          <div class="relative pt-1">
+            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
+              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-blue-400"></div>
+            </div>
+            <span class="text-sm text-gray-300">50%</span>
+          </div>
+        </div>
+
+        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" alt="Bootstrap" class="w-12 mx-auto">
+          <h3 class="text-lg font-bold text-green-300 mt-2">SpringBoot</h3>
+          <div class="relative pt-1">
+            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
+              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-300"></div>
+            </div>
+            <span class="text-sm text-gray-300">50%</span>
+          </div>
         </div>
       </div>
     </section>
