Markdown para proyectos

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,6 +1,6 @@
 <ul class="mt-16 w-sm ml-10 flex flex-col items-start py-6 rounded-3xl border-l border-r border-t  border-gray-700">
   <li>
-    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="#about">
+    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="/">
       <span class="text-xl animate-pulse">💡</span>
       <span class="text-xl font-bold uppercase tracking-wide text-white group-hover:text-yellow-400">
         Sobre Mí
@@ -9,7 +9,7 @@
   </li>
 
   <li>
-    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="#experience">
+    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="experience">
       <span class="text-xl animate-pulse">🚀</span>
       <span class="text-xl font-bold uppercase tracking-wide text-white group-hover:text-yellow-400">
         Experiencia
@@ -18,7 +18,7 @@
   </li>
 
   <li>
-    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="#projects">
+    <a class="group flex items-center gap-4 py-3 px-4 rounded-lg transition-all hover:bg-blue-600 w-full" href="projects">
       <span class="text-xl animate-pulse">📁</span>
       <span class="text-xl font-bold uppercase tracking-wide text-white group-hover:text-yellow-400">
         Proyectos
