--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import Sidebar from '../components/Sidebar.astro';
 	<body class="dark:bg-gray-900 text-white">
 		<div class="">
 			<NavBar />
-			<div class="flex h-screen ">
+			<div class="flex h-screen gap-2">
 				<Sidebar/>
 				<slot />
 			</div>
