--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import { Image } from "astro:assets";
 
 import Cards from "../components/Cards.astro";
 
-import { cards } from '../content/data/db.ts';
-
+import { cards, tecnologias, habilidadesBlandas } from '../content/data/db.ts';
+import SectionSkills from "../components/SectionSkills.astro";
 
 ---
 
@@ -36,190 +36,26 @@ import { cards } from '../content/data/db.ts';
         }
       </div>
     </section>
-    
+
     <section class="p-14">
       <h2 class="text-4xl font-bold text-white text-center ml-2 mb-8">Hábilidades </h2>
-      <h2 class="text-xl font-bold text-white text-left ml-2 mb-4">Gestión de equipos y </h2>
+      <h2 class="text-xl font-bold text-white text-left ml-2 mb-4">Destacado en: </h2>
       <div class="grid md:grid-cols-3 gap-6">
-        <div class="bg-zinc-900 p-6 rounded-xl shadow-lg border border-gray-700 text-center">
-          <h3 class="text-lg font-bold text-blue-400">🎤 Oratoria</h3>
-          <p class="text-gray-300 mt-2">Experiencia en moderación de eventos tecnológicos.</p>
-        </div>
-        <div class="bg-zinc-900 p-6 rounded-xl shadow-lg border border-gray-700 text-center">
-          <h3 class="text-lg font-bold text-green-400">⚡ Scrum</h3>
-          <p class="text-gray-300 mt-2">Aplicación de metodologías ágiles en desarrollo.</p>
-        </div>
-        <div class="bg-zinc-900 p-6 rounded-xl shadow-lg border border-gray-700 text-center">
-          <h3 class="text-lg font-bold text-yellow-400">🚀 Liderazgo</h3>
-          <p class="text-gray-300 mt-2">Coordinación de equipos en proyectos de software.</p>
-        </div>
-      </div>
-    </section>
-    
-    <section class="p-14">
-      <h2 class="text-xl font-bold text-white text-left mb-4 ml-2">Frontend</h2>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-        <!-- Tarjeta Vue.js -->
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vuejs/vuejs-original.svg" alt="Vue.js" class="w-12 mx-auto">
-          <h3 class="text-lg font-bold text-green-400 mt-2">Vue.js</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:40%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-500"></div>
-            </div>
-            <span class="text-sm text-gray-300">40%</span>
-          </div>
-        </div>
-    
-        <!-- Tarjeta JavaScript -->
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="w-12 mx-auto">
-          <h3 class="text-lg font-bold text-yellow-400 mt-2">JavaScript</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:50%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-yellow-500"></div>
-            </div>
-            <span class="text-sm text-gray-300">50%</span>
-          </div>
-        </div>
-    
-        <!-- Tarjeta CSS -->
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" class="w-12 mx-auto">
-          <h3 class="text-lg font-bold text-blue-400 mt-2">CSS</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-blue-500"></div>
-            </div>
-            <span class="text-sm text-gray-300">45%</span>
-          </div>
-        </div>
-    
-        <!-- Tarjeta Bootstrap -->
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap" class="w-12 mx-auto">
-          <h3 class="text-lg font-bold text-purple-400 mt-2">Bootstrap</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-purple-500"></div>
-            </div>
-            <span class="text-sm text-gray-300">45%</span>
-          </div>
-        </div>
+        {
+          habilidadesBlandas.map(habilidad=>(
+            <Cards
+              title={habilidad.title}
+              description={habilidad.description}
+            />
+          ))
+        }
       </div>
     </section>
 
-    <section class="p-14">
-      <h2 class="text-xl text-left font-bold text-white mb-4 ml-2">Backend</h2>
-
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Bootstrap" class="w-12 mx-auto">
-            <h3 class="text-base font-bold text-green-600 mt-2">Nodejs y Express</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-700"></div>
-            </div>
-            <span class="text-sm text-gray-300">70%</span>
-          </div>
-        </div>
-  
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="Bootstrap" class="w-12 mx-auto">
-          <h3 class="text-base font-bold text-blue-400 mt-2">Typescript</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-blue-400"></div>
-            </div>
-            <span class="text-sm text-gray-300">50%</span>
-          </div>
-        </div>
-
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" alt="Bootstrap" class="w-12 mx-auto">
-          <h3 class="text-base font-bold text-green-300 mt-2">SpringBoot</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-300"></div>
-            </div>
-            <span class="text-sm text-gray-300">50%</span>
-          </div>
-        </div>
-
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/laravel/laravel-original.svg" alt="Bootstrap" class="w-12 mx-auto">
-          <h3 class="text-base font-bold text-red-400 mt-2">Laravel</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-red-400"></div>
-            </div>
-            <span class="text-sm text-gray-300">50%</span>
-          </div>
-        </div>
-      </div>
-    </section>
+    {
+      Object.entries(tecnologias).map( ([tecnologia, tecnologias]) =>(
+        <SectionSkills title={tecnologia} , tecnologias={tecnologias}/>
+      ))
+    }
     
-    <section class="p-14">
-      <h2 class="text-xl text-left font-bold text-white mb-4 ml-2">Base de datos</h2>
-        
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <div>
-          <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="Bootstrap" class="w-12 mx-auto">
-            <h3 class="text-base font-bold text-blue-400 mt-2">MySQL</h3>
-            <div class="relative pt-1">
-              <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-                <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-blue-400"></div>
-              </div>
-              <span class="text-sm text-gray-300">50%</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" alt="SQL Server" class="w-12 mx-auto">
-          <h3 class="text-base font-bold text-red-600 mt-2">SQL Server</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:50%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-red-600"></div>
-            </div>
-            <span class="text-sm text-gray-300">50%</span>
-          </div>
-        </div>
-
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/oracle/oracle-original.svg" alt="Oracle" class="w-12 mx-auto">
-          <h3 class="text-base font-bold text-red-400 mt-2">Oracle</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:60%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-red-400"></div>
-            </div>
-            <span class="text-sm text-gray-300">60%</span>
-          </div>
-        </div>
-
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB" class="w-12 mx-auto">
-          <h3 class="text-base font-bold text-green-400 mt-2">MongoDB</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-400"></div>
-            </div>
-            <span class="text-sm text-gray-300">45%</span>
-          </div>
-        </div>
-
-        <div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/supabase/supabase-original.svg" alt="Supabase" class="w-12 mx-auto">
-          <h3 class="text-base font-bold text-green-300 mt-2">Supabase</h3>
-          <div class="relative pt-1">
-            <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-              <div style="width:45%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-300"></div>
-            </div>
-            <span class="text-sm text-gray-300">45%</span>
-          </div>
-        </div>
-      </div>
-    </section>
-  </div>
 </Layout>
