--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -5,7 +5,7 @@ const {title, urlImagen, description, href} = Astro.props as Proyecto
 
 <div class="w-full flex flex-col md:flex-row items-center bg-zinc-900 text-white p-6 rounded-xl shadow-lg border border-gray-700">
     <!-- Imagen -->
-    <img src=`/assets${urlImagen}` alt="Programación" 
+    <img src=`/assets/${urlImagen}` alt="Programación" 
         class="w-full md:w-1/2 rounded-lg shadow-lg object-cover">
     
     <!-- Contenido -->
