--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import SectionSkills from "../components/SectionSkills.astro";
     <div class="flex flex-row items-start text-center gap-20 mt-10 p-8">
       <Cards title={cards[0].title}, description = {cards[0].description} class="w-150"/>
       <Image
-        src="/assets/Elmer.JPG"
+        src="/assets/elmer.JPG"
         alt="Elmer"
         width={200}
         height={200}
