--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -25,8 +25,8 @@ const { Content, Headings } = await entry.render();
 
 <Layout>
   <div class="max-w-4xl mx-auto p-6">
-    <h1 class="text-4xl font-bold text-gray-800 mb-4">{entry.data.title}</h1>
-    <p class="text-lg text-gray-600 mb-6">{entry.data.description}</p>
+    <h1 class="text-4xl font-bold text-amber-50 mb-2">{entry.data.title}</h1>
+    <p class="text-lg text-amber-100 mb-6">{entry.data.description}</p>
 
     <img
       src={`/assets/${entry.data.imagen}`}
