--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,7 +2,7 @@
 import { Social } from "../content/data/db";
 ---
 
-<nav class="dark:bg-gray-800 flex justify-between items-center px-6 py-4 border-b border-gray-700 shadow-lg">
+<nav class="relative z-40 dark:bg-gray-800 flex justify-between items-center px-6 py-4 border-b border-gray-700 shadow-lg md:ml-64 bg-gray-800 transition-all duration-300 w-full md:w-[calc(100%-16rem)] max-w-full overflow-hidden">
   <!-- Nombre y título -->
   <div class="flex flex-col">
     <h2 class="text-3xl font-bold text-white">Elmer Noé Sosa</h2>
